--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,11 @@ LISTEN_PORT=5000
 DEFAULT_FROM_LANGUAGE=en
 DEFAULT_TO_LANGUAGE=ja
 
+ANTHROPIC_MODEL_NAME="claude-3-5-sonnet-20241022"
+ANTHROPIC_API_KEY="your_anthropic_api_key"
+
 GEMINI_MODEL_NAME="gemini-2.0-flash-exp"
-GEMINI_API_KEY="your_api_key"
+GEMINI_API_KEY="your_gemini_api_key"
+
+OPENAI_MODEL_NAME="gpt-4o-mini"
+OPENAI_API_KEY="your_openai_api_key"
