--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ GEMINI_API_KEY="your_gemini_api_key"
 
 OPENAI_MODEL_NAME="gpt-4o-mini"
 OPENAI_API_KEY="your_openai_api_key"
+
+OPENAI_COMPATIBLE_BASE_URL="http://127.0.0.1:1234/v1"
+OPENAI_COMPATIBLE_MODEL_NAME="aixsatoshi-honyaku-13b"
+OPENAI_COMPATIBLE_API_KEY="your_openai_api_key"
